remove unnecessary files

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="div-box">
             <h3>Programming Skills:</h3>
             <p>Java, JavaScript, NodeJs, PHP, SQL,
-                Angular, React, JQuery, BootsTrap and CakePHP</p>
+                Angular, React, Redux, JQuery, BootsTrap and CakePHP</p>
         </div>
 
         <div class="div-box">
@@ -34,9 +34,6 @@
             <h3>Current Situation:</h3>
             <p>Taking a course on udemy, the course name is Jonior to Senior
                 web developer from zero to mastery academy.
-            </p>
-            <p>
-                I am learning now <strong>Redux</strong> through this course.
             </p>
         </div>
 
@@ -72,6 +69,6 @@
             </a> -->
         </div>
     </div>
-<footer style="margin: 1.5rem;">Last update: 26.01.23</footer>
+<footer style="margin: 1.5rem;">Last update: 28.01.23</footer>
 </body>
 </html>
