add script tag of google

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FYYS1ZQNC2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-FYYS1ZQNC2');
+    </script>
+
     <title>Sami Almaradni</title>
 </head>
 
@@ -69,6 +79,7 @@
             </a> -->
         </div>
     </div>
-<footer style="margin: 1.5rem;">Last update: 28.01.23</footer>
+    <footer style="margin: 1.5rem;">Last update: 28.01.23</footer>
 </body>
+
 </html>
