--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
             <p><a href="https://www.pazz.de/login" target="_blank">Pazz platform</a></p>
 
             <h3>Projects iam working on:</h3>
-            <p><a href="https://github.com/sami-almaradni/face-recognition-brain" target="_blank">SmartBrain</a> (Am
-                working on the production)</p>
+            <p><a href="https://github.com/sami-almaradni/face-recognition-brain" target="_blank">SmartBrain</a></p>
             <p><a href="https://github.com/sami-almaradni/robofriends" target="_blank">RoboFriends</a></p>
         </div>
 
@@ -79,7 +78,7 @@
             </a> -->
         </div>
     </div>
-    <footer style="margin: 1.5rem;">Last update: 28.01.23</footer>
+    <footer style="margin: 1.5rem;">Last update: 21.02.23</footer>
 </body>
 
 </html>
